<resources>
    <string name="app_name">Barber&amp;Gloria</string>
    <string name="btnServico">SERVIÇO</string>
    <string name="btnBarbeiro">BARBEIRO</string>
    <string name="btnData">DATA E HORA</string>
    <string name="btnVoltar">VOLTAR</string>
    <string name="btnConfimar">CONFIRMAR</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btnDvs">DVSCUTS</string>
    <string name="btnIgor">IGOR</string>
    <string name="btnKaique">KAIQUE</string>
    <string name="btnSemPref">SEM PREFERÊNCIA</string>
    <string name="textValor">00,00</string>
    <string name="txtSimbolo">R$</string>
    <string name="txtBarba">Barba</string>
    <string name="txtCorte">Corte</string>
    <string name="txtCorBar">Corte + Barba</string>
    <string name="txtCorRela">Corte + Relaxamento</string>
    <string name="txtCorProg">Corte + Progressiva</string>
    <string name="txtsobrancelha">Sobrancelha</string>
    <string name="txtRelaxamento">Relaxamento</string>
    <string name="txtProgressiva">Progressiva</string>
    <string name="txtCorp">POR SANBEZ</string>
    <string name="btnentrarfc">ENTRAR</string>
    <string name="editTextelefone">DDD+TELEFONE</string>
    <string name="editTextnome">Nome</string>
    <string name="editTextemail">E-mail</string>
    <string name="btncontinuar">CONTINUAR</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtitem_sair">SAIR</string>
    <string name="txtmensagens">MSG</string>
    <string name="txtCad">FAÇA</string>
    <string name="txtCadastrar">CADASTRAR</string>
    <string name="btnlocalizacao">LOCALIZAÇÃO</string>
    <string name="btnpromocoes">PROMOÇÕES</string>
    <string name="btncredito">CREDITO</string>
    <string name="mapView">MAPA</string>
    <string name="valBarba">15,00</string>
    <string name="valCorte">20,00</string>
    <string name="valCorEBarba">30,00</string>
    <string name="valCorEProg">20,00</string>
    <string name="valCorERela">20,00</string>
    <string name="valHidratacao">20,00</string>
    <string name="valSobrancelha">20,00</string>
    <string name="valLimpeza">20,00</string>
    <string name="valPezinho">20,00</string>
    <string name="txtlimpezafacial">Limpeza Facial</string>
    <string name="txtpezinho">Pezinho</string>
    <string name="valCorteInfantil">15,00</string>
    <string name="txtCorteinfantil">Corte Infantil</string>
    <string name="valLuzes">20,00</string>
    <string name="txtLuzes">Luzes</string>
    <string name="selectHour"> Selecionae um horário disponível</string>
    <string name="hora1"> 10:00 </string>
    <string name="hora2"> 11:00 </string>
    <string name="hora3"> 12:00 </string>
    <string name="hora4"> 13:00 </string>
    <string name="hora5"> 14:00 </string>
    <string name="hora6"> 15:00 </string>
    <string name="hora7"> 16:00 </string>
    <string name="hora8"> 17:00 </string>
    <string name="hora9"> 18:00 </string>
    <string name="back"> } </string>
    <string name="selecioneBarb">Selecione o Barbeiro</string>
    <string name="title_activity_barbe_localizao">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">1132621780423479</string>
    <string name="fb_login_protocol_scheme">fb1132621780423479</string>
    <string name="fbCadastro">Quase lá, que tal inserir alguns
        dados para concluir o cadastro e ficar
        por dentro das nossas promoções?</string>


</resources>
