<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Servico">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="674dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnVoltar" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtSimbolo"/>
        <TextView
            android:id="@+id/txtValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textValor"/>

        <Button
            android:id="@+id/btnConfimar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnConfimar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>